@@ -11,6 +11,8 @@ Changes
   has been moved to the ``jaraco.classes`` package.
 * Deprecated ``jaraco.util.classlib.ensure_sequence``. Use
   ``jaraco.itertools.always_iterable`` instead.
+* Deprecated ``jaraco.util.context``. Functionality moved to
+  ``jaraco.context``.
 
 10.8
 ~~~~
